--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -9,7 +9,7 @@ on:
 
 env:
 
-    ACTION: "apply"
+    ACTION: "destroy"
     S3_VERSION: "Enabled"
     AWS_REGION: "us-east-1"
     S3_DATABASE_STORAGE: "database"
